# azure-retail-demand-forecasting

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
infra/: notes.md
notebooks/: etl_m5_databricks.ipynb
sql/: queries.sql  schema.sql
src/: __init__.py
src/db/: __init__.py  connection.py
src/etl/: __init__.py  transform_m5.py
src/features/: __init__.py  engineering.py
src/model/: __init__.py  predict.py  serve.py  train.py
streamlit_app/: app.py
tests/: __init__.py  test_etl_schema.py  test_features.py  test_serve.py  test_smape.py
